Major refactor of screen system. Deslopified LOTS AND LOTS OF THINGS YUPIII